<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                android:background="@color/dark_transparent_75">
    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/info"/>
    <TextView
        android:id="@+id/info_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_icon"
        android:padding="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/info_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_icon"
        android:layout_below="@id/info_name"
        android:gravity="center"
        android:textColor="#aaaaaa"/>
    <TextView
        android:id="@+id/info_copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/info_icon"
        android:layout_below="@id/info_version"
        android:textColor="#aaaaaa"
        android:text="@string/copyright"/>
    <TextView
        android:id="@+id/info_copyright_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="10sp"
        android:textStyle="italic"
        android:textColor="#cccccc"
        android:text="@string/copyright_text"/>
</RelativeLayout>