<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <ImageView 
        android:id="@+id/in_progress_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@drawable/btn_disable"
        android:contentDescription="@string/sight_image"/>
    <LinearLayout android:id="@+id/level_menu_bar" 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_alignParentBottom="true"
                  android:orientation="horizontal">
        <ImageButton android:id="@+id/button_camera" 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/camera"
                     android:src="@drawable/ic_camera"
                     android:background="@drawable/selector_level_option"
                     android:onClick="onCamera"/>
        <ImageButton android:id="@+id/button_map"  
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/map"
                     android:src="@drawable/ic_map"
                     android:background="@drawable/selector_level_option"
                     android:onClick="onMap"/>
    </LinearLayout>
</RelativeLayout>