<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:baselineAligned="false"
              android:orientation="horizontal"
              android:background="@drawable/img_bg">
    <LinearLayout 
        android:layout_weight="0.7"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/dark_transparent_50">
        <rs.ac.metropolitan.cs330.znamenitosti.gui.FancyTextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/blue_transparent_50"
            android:text="@string/select_level"
            android:textSize="24sp"
            android:textStyle="bold|italic"/>
        <fragment
            android:id="@+id/select_level_fragment"
            android:name="rs.ac.metropolitan.cs330.znamenitosti.fragment.main.SelectLevel"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"/>
    </LinearLayout>
    <RelativeLayout 
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:padding="10dp">
        <LinearLayout android:id="@+id/menu_bar" 
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true"
                      android:orientation="horizontal">
            <ImageButton android:id="@+id/button_home" 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/statistic"
                         android:src="@drawable/ic_home"
                         android:background="@drawable/btn_disable"
                         android:onClick="onHome"/>
            <ImageButton android:id="@+id/button_settings"  
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/settings"
                         android:src="@drawable/ic_settings"
                         android:background="@drawable/btn_disable"
                         android:onClick="onSettings"/>
            <ImageButton android:id="@+id/button_help" 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/help"
                         android:src="@drawable/ic_help"
                         android:background="@drawable/btn_disable"
                         android:onClick="onHelp"/>
            <ImageButton android:id="@+id/button_info" 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/info"
                         android:src="@drawable/ic_info"
                         android:background="@drawable/btn_disable"
                         android:onClick="onInfo"/>
        </LinearLayout>
        <FrameLayout 
            android:id="@+id/meun_fragment_content"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_below="@id/menu_bar"
            android:padding="5dp"/>
    </RelativeLayout>
</LinearLayout>

